# stm32_playground

./: .gitignore  .mxproject  .skip.file  .software.list  CMakeLists.txt  Makefile  README.md  cubeCM.ioc  cubeMX.Makefile  gcc-arm-none-eabi.cmake  install_script.ps1
Core/Src/: main.c  stm32f4xx_hal_msp.c
src/: Main.c  Main.h
